--- a/style.css
+++ b/style.css
@@ -551,10 +551,10 @@ a {
     }
 
     .nav-links-group a.btn-brand {
-        position: absolute;
-        bottom: 2rem;
-        right: 5%;
-        width: 90%;
-        text-align: center;
+            position: relative;
+            top: 59%;
+            margin: 0 auto;
+            width: 100%;
+            text-align: center;
     }
 }
